--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
 - URL=https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
 before_install:
 - openssl aes-256-cbc -K $encrypted_25afbaf66165_key -iv $encrypted_25afbaf66165_iv
-  -in assets/server.key.enc -out assets/server.key -d
+  -in assets/server.key.enc -out assets/server.key -d -md md5
 - export SFDX_AUTOUPDATE_DISABLE=true
 - export SFDX_USE_GENERIC_UNIX_KEYCHAIN=true
 - export SFDX_DOMAIN_RETRY=300
