--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ script:
 - sfdx force:source:push -u ciorg
 - sfdx force:apex:test:run -u ciorg -c -r human
 - sfdx force:org:display -u ciorg
-# - sfdx force:org:delete -u ciorg -p
+- sfdx force:org:delete -u ciorg -p
